v 1.0 - Lexical Analyser - improved makefile, improved test.jsc, improved gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,8 @@
 # ignore arquivos que nao precisamos manter estado no git
 .directory
 lex.yy.c
+*.lex
+*.syn
+*.asm
 *.sublime-project
 *.sublime-workspace
