v 1.2 - Lexical Analser - added new error.jsc file to test errors, modified makefile (removed -std=c99), added error handling to lex.yy.l, changed the lexical definition to the proper one

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ MIPS=qtspim
 
 # compilador c, linkar com o flex,
 GCC=gcc
-CFLAGS=-lfl -std=c99
+CFLAGS=-lfl
 
 # compilador c++, codegen
 # GPP=g++
