v 1.3 Lexical Analiser - v0.9 Sintatic Analiser - fixed problem with ERROR token, improved makefile, organized the sintatic analiser code, introduced a stack to operate as tree inside parser

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ CPPFLAGS=-lm -std=c++11
 # OBJ_CPP_FILES := $(notdir $(CPP_FILES:.cpp=.o))
 
 # arquivos objeto de cada programa (lexico e codegen)
-OBJ_SYN=syn.ocpp classes/node.ocpp
+OBJ_SYN=syn.ocpp classes/node.ocpp classes/error.ocpp classes/operate.ocpp classes/parser.ocpp
 OBJ_LEX=lex.yy.o
 OBJ_GEN=gen.o
 
@@ -103,9 +103,9 @@ full_clean: clean
 
 # compile de .c em arquivo objeto .o
 %.o: %.c
-	$(GCC) -c -o $@ $^ $(CFLAGS)
+	$(GCC) -c -o $@ $< $(CFLAGS)
 
 # compile de .cpp em arquivo objeto .ocpp
-%.ocpp: %.cpp
-	$(GPP) -c -o $@ $^ $(CPPFLAGS)
+%.ocpp: %.cpp %.h
+	$(GPP) -c -o $@ $< $(CPPFLAGS)
 
