semantical analiser - implemented block, program, decfunc and decvar sintatical analisys; still needs to handle context; improved node.cpp to handle rbegin rend; improved operate and parser to use Utility class (utility.cpp); moved some utility functions to the utility class (this class is shared throught the program and is used by the many parts of the analiser); modified the ast_types to have better error codes; added a note to the Makefile (we need GCC >= 4.8 to compile this def language compiler); added line to the error and node .cpp files (better error detection)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,8 @@
+
 # variaveis dos compiladores/simuladores
 MIPS=qtspim
 
+# TO COMPILE THIS SOURCE CODE, YOU WILL NEED GCC / G++ >= 4.8
 # compilador c, linkar com o flex,
 GCC=gcc
 CFLAGS=-ggdb -g3 -lfl -lm
