--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ GCC=gcc
 CFLAGS=-ggdb -g3 -lfl -lm
 
 GPP=g++
-CPPFLAGS=-Wno-write-strings -ggdb  -g3 -lm -std=c++11
+CPPFLAGS=-Wno-write-strings -ggdb  -g3 -lfl -lm -std=c++11
 
 # VERIFICACAO DE LEAKS DE MEMORIA
 VALGRIND=valgrind
@@ -20,23 +20,14 @@ VALGRIND_ARGS=--leak-check=full --show-leak-kinds=all -v
 # OBJ_CPP_FILES := $(notdir $(CPP_FILES:.cpp=.o))
 
 # arquivos objeto de cada programa (lexico e codegen)
-OBJ_SYN=syn.ocpp classes/node.ocpp classes/error.ocpp classes/operate.ocpp classes/parser.ocpp classes/sintatical.ocpp classes/semantical.ocpp classes/context.ocpp classes/defined.ocpp
-OBJ_LEX=lex.yy.o
-OBJ_GEN=gen.o
+OBJ_COMPILER=main.o classes/node.o classes/error.o classes/operate.o classes/parser.o classes/sintatical.o classes/semantical.o classes/context.o classes/defined.o lex.yy.o
 
 # binarios
-ANALISER_BIN=lexico
-CODEGEN_BIN=codegen
-SYN_BIN=syn
-LEX_BIN=lex
-GEN_BIN=gen
-
-ANALISER_TARGET=$(ANALISER_BIN).target
-CODEGEN_TARGET=$(CODEGEN_BIN).out
+COMPILER_BIN=compilador
 
 # default do make
 default: full_clean
-	@$(MAKE) $(CODEGEN_TARGET)
+	@$(MAKE) $(COMPILER_BIN)
 
 
 # rode o simulador MIPS (SPIM)
@@ -44,72 +35,37 @@ default: full_clean
 # 		make arquivo_jsc_a_ser_executado.spim
 %.spim: %.asm
 	@echo -e "\n\tExecutando simulador SPIM (assembly) ...\n"
-	@$(MIPS) -file $*.asm
-
-# rode o analisador lexico
-# sintaxe:
-# 		make arquivo_jsc_a_ser_analisado.lex
-%.lex: $(ANALISER_TARGET)
-	@echo -e "\n\tExecutando analisador lexico (scanner/tokenizer) ...\n"
-	@./$(ANALISER_BIN) $*.jsc $*.lex
-	@echo -e "Resultado:\n"
-	@cat $*.lex
+	@$(MIPS) -file $*.asm &
 
 # rode o analisador sintatico
 # sintaxe:
 # 		make arquivo_jsc_a_ser_analisado.syn
-%.syn: $(ANALISER_TARGET)
-	@echo -e "\n\tExecutando analisador simbolico (parser) ...\n"
-	@./$(ANALISER_BIN) $*.jsc $*.syn
+%.lex %.syn %.asm: $(COMPILER_BIN)
+	@echo -e "\n\tExecutando compilador ...\n"
+	@./$(COMPILER_BIN) $*.jsc $@
 	@echo -e "Resultado:\n"
-	@cat $*.syn
+	@cat $@
 
-# rode o gerador de codigo
-# sintaxe:
-# 		make arquivo_jsc_a_ser_compilado.asm
-%.asm: $(CODEGEN_TARGET)
-	@echo -e "\n\tExecutando gerador de código (assembly) ...\n"
-	@./$(CODEGEN_BIN) $*.jsc $*.asm
-	@echo -e "Resultado:\n"
-	@cat $*.asm
-
-# compile o analisador (lexico e sintatico) e torne o
-# script ./lexico executavel
-$(ANALISER_TARGET): $(LEX_BIN) $(SYN_BIN)
-	@chmod +rx $(ANALISER_BIN)
-
-# compile o analisador lexico
-$(LEX_BIN): $(OBJ_LEX)
-	$(GCC) -o $(LEX_BIN) $^ $(CFLAGS)
-
-# compile o analisador semantico/sintatico
-$(SYN_BIN): $(OBJ_SYN)
-	$(GPP) -o $(SYN_BIN) $^ $(CPPFLAGS)
-
-# compile o analisador (lexico e sintatico) e torne o
-# script ./lexico executavel
-$(CODEGEN_TARGET): $(GEN_BIN) $(ANALISER_TARGET)
-	@chmod +rx $(CODEGEN_BIN)
-
-# compile o gerador de codigo lexico
-$(GEN_BIN): $(OBJ_GEN)
-	$(GCC) -o $(GEN_BIN) $^ $(CFLAGS)
+# compile o analisador semantico/sintatico e gerador
+$(COMPILER_BIN): $(OBJ_COMPILER)
+	$(GPP) -o $(COMPILER_BIN) $^ $(CPPFLAGS)
 
 #compile o analisador lexico (scanner) usando flex
-lex.yy.c: lex.yy.l
-	lex lex.yy.l
+lex.yy.cpp: lex.yy.l
+	flex -o lex.yy.cpp lex.yy.l
 
 # limpe arquivos temporarios
 clean:
-	@echo -e "\n\tLimpando arquivos .syn .lex .asm ...\n"
+	@echo -e "\n\tLimpando arquivos .syn .lex .asm .temp* ...\n"
 	@find * -name '*.syn' -exec $(RM) {} \;
 	@find * -name '*.lex' -exec $(RM) {} \;
 	@find * -name '*.asm' -exec $(RM) {} \;
+	@find * -name '*.temp*' -exec $(RM) {} \;
 
 # limpe binarios e arquivos objeto
 clean_bin:
 	@echo -e "\n\tLimpando binarios e objetos ...\n"
-	@$(RM) $(LEX_BIN) $(SYN_BIN) $(GEN_BIN) lex.yy.c
+	@$(RM) $(COMPILER_BIN) lex.yy.c lex.yy.cpp lex.yy.cc
 	@find * -name '*.o' -exec $(RM) {} \;
 	@find * -name '*.ocpp' -exec $(RM) {} \;
 
@@ -119,11 +75,7 @@ full_clean: clean_bin clean
 %.v: %
 	@$(VALGRIND) $(VALGRIND_ARGS) ./$*
 
-# compile de .c em arquivo objeto .o
-%.o: %.c
-	$(GCC) -c -o $@ $< $(CFLAGS)
-
 # compile de .cpp em arquivo objeto .ocpp
-%.ocpp: %.cpp %.h
+%.o: %.cpp %.h
 	$(GPP) -c -o $@ $< $(CPPFLAGS)
 
